Fix tests [Patience-Management]